# ITK_Academy

./: draft.py  main.py  pyproject.toml
src/: 1.19.py
src/1.19/: 1.19.py
src/1.26/: 1.26.py  singleton.py
src/1.27/: 1.27.py
src/3.8/: 3.8.py  results.jsonl
src/3.9/: 3.9.py  result.jsonl  urls.txt
src/4.10/: result.json
src/6.7/: main.py
src/week 1/1.19/: 1.19.py
src/week 1/1.27/: 1.27.py
src/week 1/2.8/: 2.8.py
src/week 1/3.8/: 3.8.py
src/week 1/3.9/: 3.9.old.py  3.9.py  result.jsonl
src/week 1/4.10/: 4.10.py
src/week 2/1.10/: main.py
src/week 2/1.11/: main.py
src/week 2/1.12/: main.py
src/week 2/1.6/: main.py
src/week 3/1.1/: main.py
src/week 3/1.2/: main.py
src/week 3/1.3/: main.py
src/week 3/1.4/: main.py
src/week 3/2.1/: main.py
